:building_construction: change api endpoint :memo: update openapi.yaml
