# router/v1/v1_router.go
@@ -64,8 +64,8 @@ func (r *Router) AddRouter() {
 				personalClubGroup.DELETE("/", r.middleware.CheckSession(), r.middleware.AdminOnly(), h.DeleteClub())
 				personalClubGroup.GET("/achievement", h.GetClubAchievement())
 				personalClubGroup.PUT("/achievement", r.middleware.CheckSession(), r.middleware.IdentifyUUID(consts.ClubUUIDKeyName), h.UpdateClubAchievement())
-				personalClubGroup.GET("/activity_detail", h.GetClubActivityDetails())
-				personalClubGroup.PUT("/activity_detail", r.middleware.CheckSession(), r.middleware.IdentifyUUID(consts.ClubUUIDKeyName), h.UpdateClubActivityDetails())
+				personalClubGroup.GET("/time_place", h.GetClubActivityDetails())
+				personalClubGroup.PUT("/time_place", r.middleware.CheckSession(), r.middleware.IdentifyUUID(consts.ClubUUIDKeyName), h.UpdateClubActivityDetails())
 				personalClubGroup.GET("/content", h.GetClubContent())
 				personalClubGroup.PUT("/content", r.middleware.CheckSession(), r.middleware.IdentifyUUID(consts.ClubUUIDKeyName), h.UpdateClubContent())
 				personalClubGroup.GET("/description", h.GetClubDescription())
